# bug-ghost-ai

./: .gitignore  API_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_DOCKER_COMPOSE.md  DEVELOPER_GUIDE.md  FILE_STRUCTURE.md  INDEX.md  LICENSE  PHASE2_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SANDBOX_QUICKSTART.md  START_HERE.md  START_HERE_PHASE2.md  docker-compose.yml  package-lock.json  setup-sandbox.bat  setup-sandbox.sh  setup.bat  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes_auth.py  routes_debug.py  routes_runs.py  routes_sandbox.py  routes_teams.py
backend/app/db/: session.py
backend/app/models/: __init__.py  debug_session.py  run.py  team.py  user.py
backend/app/schemas/: __init__.py  debug_session.py  run.py
backend/app/services/: __init__.py  llm_client.py  repro_generator.py  sandbox_runner.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_repro_generator.py  test_sandbox_runner.py
frontend/: jest.config.ts  package-lock.json  package.json
frontend/__tests__/: ErrorForm.test.tsx  SessionsPage.test.tsx
frontend/app/: error.tsx  global-error.tsx  layout.tsx  page.tsx
frontend/app/sandbox/: page.tsx
frontend/components/: CodeBlock.tsx  ErrorForm.tsx  LoginWithGitHub.tsx  Navbar.tsx  SessionResult.tsx
sandbox/: README.md
sandbox/java/: Dockerfile
sandbox/node/: Dockerfile
sandbox/python/: Dockerfile
(+4 files in other folders)
